--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.13.1",
+    "react-native-scripts": "1.13.2",
     "jest-expo": "26.0.0",
     "react-test-renderer": "16.3.0-alpha.1"
   },
@@ -20,8 +20,8 @@
   },
   "dependencies": {
     "expo": "^26.0.0",
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0",
+    "react": "16.3.0",
+    "react-native": "~0.54.1",
     "react-native-i18n": "^2.0.12"
   }
 }
