--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "expo": "^26.0.0",
     "react": "16.3.0",
     "react-native": "~0.54.1",
-    "react-native-i18n": "^2.0.12"
+    "react-native-i18n": "^2.0.12",
+    "react-navigation": "^1.5.11",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.2.0"
   }
 }
