--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language:
   node_js
+branches:
+  only:
+  - master
+cache:
+  directories:
+  - node_modules
+before_install:
+- npm update
 install:
-- npm install -g codecov
+- npm install
 script:
+- npm test-coverage
 - codecov
