--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ cache:
   directories:
   - node_modules
 install:
-- npm install -g jest
-- npm install -g codecov
+- npm install
 script:
 - npm test
 - codecov
