--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language:
   node_js
-install:
-- npm install -g codecov
+branches:
+  only:
+  - master
+cache:
+  directories:
+  - node_modules
 script:
-- istanbul cover node_modules\jest\bin\jest.js
-- codecov
+- npm test
