--- a/package.json
+++ b/package.json
@@ -4,31 +4,41 @@
   "private": true,
   "devDependencies": {
     "babel-preset-react-native-stage-0": "^1.0.1",
-    "jest": "^23.1.0",
+    "codecov": "^3.1.0",
+    "jest": "^23.6.0",
+    "jest-fetch-mock": "^1.6.6",
     "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.3.0-alpha.1"
+    "react-test-renderer": "16.5.2"
   },
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest"
+    "test": "jest",
+    "test-coverage": "jest --coverage",
+    "log-android": "react-native log-android"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "dependencies": {
-    "native-base": "^2.4.4",
-    "react": "16.3.0",
-    "react-native": "~0.54.1",
-    "react-native-camera": "^1.1.4",
+    "native-base": "^2.8.0",
+    "react": "16.5.2",
+    "react-native": "^0.57.1",
+    "react-native-camera": "^1.3.0",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "^2.0.12",
     "react-native-material-switch": "0.0.4",
+    "react-native-paper": "^2.0.1",
     "react-native-splash-screen": "^3.1.0",
-    "react-navigation": "^2.0.4",
+    "react-native-vector-icons": "^5.0.0",
+    "react-navigation": "^2.17.0",
+    "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.2.0"
   },
