--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language:
   node_js
-branches:
-  only:
-  - master
-cache:
-  directories:
-  - node_modules
+node_js:
+  - "8"
+  - "8.10.0"
+  - "6"
+  - "6.13.1"
 scripts:
-- npm run test-coverage
+  - npm run test-coverage
 after_success:
-- bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
