--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-preset-react-native-stage-0": "^1.0.1",
-    "codecov": "^3.1.0",
+    "babel-jest": "^23.6.0",
     "jest": "^23.6.0",
     "jest-fetch-mock": "^1.6.6",
     "jest-react-native": "^18.0.0",
@@ -19,11 +18,12 @@
     "log-android": "react-native log-android"
   },
   "jest": {
-    "preset": "react-native",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
+    "preset": "react-native"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-react-native": "^4.0.0",
     "native-base": "^2.8.0",
     "react": "16.5.0",
     "react-native": "^0.57.1",
@@ -33,7 +33,6 @@
     "react-native-material-switch": "0.0.4",
     "react-native-paper": "^2.0.1",
     "react-native-splash-screen": "^3.1.0",
-    "react-native-vector-icons": "^4.2.0",
     "react-navigation": "^2.17.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
