--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language:
 node_js:
   - "8.12.0"
 scripts:
-  - npm run test-coverage
+  - npm test-coverage
 after_success:
   - bash <(curl -s https://codecov.io/bash)
