Añadir configuraicon codacy

--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "jest",
-    "test-coverage": "jest --coverage",
     "log-android": "react-native log-android"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true
   },
   "dependencies": {
     "babel-core": "^6.26.3",
