--- a/package.json
+++ b/package.json
@@ -1,46 +1,45 @@
 {
   "name": "UniOviSCOPE",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "babel-jest": "^23.6.0",
-    "jest": "^23.6.0",
-    "jest-fetch-mock": "^1.6.6",
-    "jest-react-native": "^18.0.0",
-    "react-test-renderer": "16.5.2"
-  },
   "scripts": {
     "start": "react-native start",
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
     "test": "jest",
+    "android": "react-native run-android",
     "log-android": "react-native log-android"
   },
-  "jest": {
-    "preset": "react-native",
-    "coverageDirectory": "./coverage/",
-    "collectCoverage": true
-  },
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-preset-react-native": "^4.0.0",
-    "native-base": "^2.8.0",
+    "@babel/runtime": "^7.1.2",
+    "native-base": "^2.8.1",
     "react": "16.5.0",
-    "react-native": "^0.57.1",
+    "react-native": "0.57.1",
     "react-native-camera": "^1.3.0",
     "react-native-elements": "^0.19.1",
-    "react-native-i18n": "^2.0.12",
-    "react-native-material-switch": "0.0.4",
-    "react-native-paper": "^2.0.1",
-    "react-native-splash-screen": "^3.1.0",
+    "react-native-i18n": "^2.0.15",
+    "react-native-paper": "^2.1.0",
+    "react-native-splash-screen": "^3.1.1",
+    "react-native-vector-icons": "^6.0.1",
     "react-navigation": "^2.17.0",
     "react-navigation-material-bottom-tabs": "^0.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-mock-store": "^1.5.3",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.3.0"
+  },
+  "devDependencies": {
+    "babel-jest": "23.6.0",
+    "jest": "23.6.0",
+    "metro-react-native-babel-preset": "0.47.1",
+    "react-test-renderer": "16.5.0",
+    "redux-mock-store": "^1.5.3"
+  },
+  "jest": {
+    "preset": "react-native",
+    "coverageDirectory": "./coverage/",
+    "collectCoverage": true,
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   },
   "rnpm": {
     "assets": [
