--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest",
     "android": "react-native run-android",
     "log-android": "react-native log-android"
@@ -13,10 +13,10 @@
     "native-base": "^2.8.1",
     "react": "16.5.0",
     "react-native": "0.57.1",
-    "react-native-camera": "^1.3.0",
+    "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "^2.0.15",
-    "react-native-paper": "^2.1.0",
+    "react-native-paper": "^2.1.1",
     "react-native-splash-screen": "^3.1.1",
     "react-native-vector-icons": "^6.0.1",
     "react-navigation": "^2.17.0",
@@ -24,10 +24,12 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-persist": "^5.10.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.10.13"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "fetch-mock": "^7.2.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.47.1",
     "react-test-renderer": "16.5.0",
@@ -39,7 +41,10 @@
     "collectCoverage": true,
     "transform": {
       "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
-    }
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!react-native|expo|react-navigation|native-base-shoutem-theme|@shoutem/theme|@shoutem/animation|@shoutem/ui|tcomb-form-native|native-base)"
+    ]
   },
   "rnpm": {
     "assets": [
