--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-camera": "git+https://git@github.com/react-native-community/react-native-camera",
+    "react-native-cli": "^2.0.1",
     "react-native-elements": "^0.19.1",
     "react-native-i18n": "^2.0.15",
     "react-native-paper": "^2.1.1",
